--- a/XMLIO/XMLIO.csproj
+++ b/XMLIO/XMLIO.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>1.0.2</Version>
     <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Robert Little</Authors>
+    <Product>TCore.XMLIO</Product>
+    <Description>Imperative templated XML reading on top of System.Xml</Description>
+    <Copyright>2021 Robert Little</Copyright>
+    <PackageProjectUrl>https://github.com/rlittletht/TCore.XMLIO</PackageProjectUrl>
+    <PackageId>TCore.XMLIO</PackageId>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.12.0" />
-  </ItemGroup>
 
 </Project>
