--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 4.7.2
+          dotnet-version: 3.1.x
       - name: Install dependencies
         run: dotnet restore
       - name: Build
