--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
           dotnet-version: 3.1.x
       - name: Install dependencies
         run: dotnet restore
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
+      - name: Build XMLIO
+        run: dotnet build --configuration Release --no-restore XMLIO
       - name: Publish TCore.XMLIO
         uses: brandedoutcast/publish-nuget@v2.5.2
         with:
