--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
         with:
           PROJECT_FILE_PATH: XMLIO/XMLIO.csproj
           NUGET_KEY: ${{secrets.THETAGET_API_KEY}}
-          NUGET_SOURCE: http://thetaget.azurewebsites.net/nuget
+          NUGET_SOURCE: https://thetaget.azurewebsites.net/nuget
