--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Build XMLIO
         run: dotnet build --configuration Release --no-restore XMLIO
       - name: Publish TCore.XMLIO
-        run: dotnet nuget push XMLIO/bin\Release\*.nupkg -s https://thetaget.azurewebsites.net/nuget -k ${NUGET_KEY} --no-symbols --skip-duplicate
+        run: dotnet nuget push XMLIO/bin/Release/*.nupkg -s https://thetaget.azurewebsites.net/nuget -k ${NUGET_KEY} --no-symbols --skip-duplicate
         env:
           NUGET_KEY: ${{secrets.THETAGET_API_KEY}}
