--- a/XMLIO/XMLIO.csproj
+++ b/XMLIO/XMLIO.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.3</Version>
+    <TargetFrameworks>net462;net472;net48;net7.0;netstandard2.0</TargetFrameworks>
+    <Version>1.1.0</Version>
     <AssemblyVersion>1.0.3.0</AssemblyVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Robert Little</Authors>
