--- a/XMLIO.Tests/packages.config
+++ b/XMLIO.Tests/packages.config
@@ -4,4 +4,5 @@
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
+  <package id="TCore.Exceptions" version="1.1.1" targetFramework="net472" />
 </packages>
